--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
-  <div class="hand"></div>
+  <div id="cardlist"></div>
 
   <script type="text/html" id="card_template">
     <div class="card {{type}}">
@@ -29,6 +29,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.js"></script>
+  <script src="./cards.js"></script>
   <script src="./main.js"></script>
 </body>
 </html>
